Apache Falcon Regression Change log

Trunk (Unreleased)

  INCOMPATIBLE CHANGES

  NEW FEATURES
   FALCON-1198 Test buttons available on search results page (Ruslan Ostafiychuk)

   FALCON-1187 Test that changes made via API are reflected on UI (Ruslan Ostafiychuk
   via Raghav Kumar Gautam)

   FALCON-1173 Tests for entities table of search-ui (Ruslan Ostafiychuk)

   FALCON-1171 Adding search API tests (Paul Isaychuk via Raghav Kumar Gautam)

   FALCON-1167 Homepage & Login test for search-ui (Raghav Kumar Gautam via Ruslan Ostafiychuk)

   FALCON-1067 Add test in falcon-regression for feed instance listing api(Karishma G 
   via Samarth G) 
 
   FALCON-1066 Add test in falcon to test process SLA feature(Pragya M via Samarth G)
 
   FALCON-964 add test in falcon regression to test loading of jar present in user lib(Pragya M 
   via Samarth Gupta)
   
   FALCON-974 add test in falcon-regression for log mover feature(Pragya via Samarth Gupta)
   
   FALCON-843 add test to support current & last week el expression(Pragya M via Samarth G)

   FALCON-1035 Add test in falcon regression for validate feature. Validate is exposed 
   via both server and prism (Karishma G via Samarth Gupta)

   FALCON-1030 Test for Add option to search for Entities(Pragya Mittal Via Samarth Gupta)

   FALCON-1043 Add test in falcon to test touch feature(Pragya Mittal via Samarth Gupta)   

   FALCON-1021 Add test in falcon to test feed SLA feature (Pragya Mittal via Raghav Kumar Gautam)

   FALCON-671 Add a test in falcon-regression where one oozie workflow has various actions like
   mr, hive, pig (Karishma Gulati via Ruslan Ostafiychuk)

   FALCON-985 Upgrading jsch version in falcon regression pom (Pragya M via Samarth)

   FALCON-884 Add option to dump xmls generated by falcon (Raghav Kumar Gautam via Ruslan
   Ostafiychuk)

   FALCON-893 Add tests for replication to wasb filesystem
   (Raghav Kumar Gautam and Ruslan Ostafiychuk via Arpit Gupta)
